--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "express": "3.4.8",
-    "jade": "*"
+    "jade": "*",
+    "mysql": "^2.1.0",
+    "sequelize": "^1.7.0-rc6",
+    "pg": "^2.11.1"
   },
   "repository": {
     "type": "git",
